<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CriminalIntent</string>

    <string name="crime_report">%1$s! The crime was discovered on %2$s. %3$s, and %4$s</string>

    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">there is no suspect</string>
    <string name="crime_report_suspect">the suspect is %s.</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via</string>

    <string name="title_string">Title</string>
    <string name="enter_title_prompt_string">Enter a title for the crime.</string>
    <string name="crime_detail_string">Details</string>
    <string name="date_string">Date</string>
    <string name="crime_suspect_string">Crime Suspect</string>
    <string name="crime_report_string">Crime Report</string>
    <string name="solved_string">Solved</string>

    <string name="crime_photo_no_image_descr">Crime scene photo (not set)</string>
    <string name="crime_photo_image_descr">Crime scene photo (not set)</string>



</resources>