<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="30dp"
    >
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <LinearLayout
        android:layout_marginEnd="20dp"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/crime_photo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@color/black"
            android:cropToPadding="true"
            android:scaleType="centerCrop" />

        <ImageButton
            android:id="@+id/crimeCamera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/crime_photo_no_image_descr"
            android:src="@drawable/ic_baseline_photo_camera_24"></ImageButton>

    </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amiko"
            android:inputType="text"
            android:text="@string/title_string"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />
        <EditText
            android:id="@+id/crime_title"
            android:hint="@string/enter_title_prompt_string"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amiko"
            android:inputType="text"/>
        </LinearLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:layout_width="match_parent"
        android:text="@string/crime_detail_string"
        android:layout_height="wrap_content"
        android:fontFamily="@font/amiko"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"/>

    <Button
        android:id="@+id/crimeDate"
        android:padding="10dp"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:fontFamily="@font/amiko"
        android:text="@string/date_string" />

    <Button
        android:id="@+id/crime_suspect"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:fontFamily="@font/amiko"
        android:padding="10dp"
        android:text="@string/crime_suspect_string" />
    <Button
        android:id="@+id/crime_report"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:fontFamily="@font/amiko"
        android:text="@string/crime_report_string" />
    <CheckBox
        android:id="@+id/crimeSolved"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/amiko"
        android:text="@string/solved_string" />
</LinearLayout>
